- Better display of the "Resolved Request" form, where the user can submit their satisfaction & feedbacks. Now aligned with the display of the ticket's details.
SVN:trunk[1261]

--- a/portal/portal.css
+++ b/portal/portal.css
@@ -114,6 +114,11 @@ a.button span {
 	width:800px;
 	text-align: left;
 }
+#form_close_request {
+	display: inline-block;
+	width:800px;
+	text-align: left;
+}
 #request_details_log {
 	width:774px;
 }
